# repl

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_server_config.json
.github/workflows/: python-package.yml
pymodbus/repl/client/: completer.py
pymodbus/repl/server/: main.py
pymodbus_repl/: __init__.py
pymodbus_repl/client/: completer.py  helper.py  main.py  mclient.py
pymodbus_repl/lib/: __init__.py  completer.py  helper.py  reactive.py
pymodbus_repl/server/: README.md  README.rst  cli.py  main.py
tests/: test_repl_client.py
